[package]
name = "jobabc-internal-next"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
serde_json = "1.0"
jobabc-internal-admin = { path = "../jobabc-internal-admin" }
serde = { version = "1.0", features = ["derive"] }
ssh2 = "0.9"
prettytable-rs = "0.10"
dialoguer = "0.11"